// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostPreviewCard - Snapshots > matches snapshot for a collection original 1`] = `
<div
  class="min-w-0"
  data-cy="post-preview-card"
  data-testid="container"
>
  <div
    class="w-full"
    data-author-pubky="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
    data-interactive-actions="true"
    data-post-id="0034BBBDFK83G"
    data-presentation="embed"
    data-testid="collection-card"
  />
</div>
`;

exports[`PostPreviewCard - Snapshots > matches snapshot with default props 1`] = `
<div
  aria-label="View original post"
  class="w-full max-w-full min-w-0 cursor-pointer rounded-md py-0 transition-colors hover:bg-accent/50"
  data-testid="card"
  role="link"
  tabindex="0"
>
  <div
    class="flex w-full max-w-full min-w-0 flex-col gap-4 p-6"
    data-testid="card-content"
  >
    <div
      data-post-id="snapshot-post-id"
      data-testid="post-header"
      data-time-ago-placement="bottom-left"
    >
      PostHeader 
      snapshot-post-id
    </div>
    <div
      data-post-id="snapshot-post-id"
      data-testid="post-content-base"
    >
      PostContentBase 
      snapshot-post-id
    </div>
  </div>
</div>
`;

exports[`PostPreviewCard - Snapshots > matches snapshot with extra className 1`] = `
<div
  aria-label="View original post"
  class="w-full max-w-full min-w-0 cursor-pointer rounded-md py-0 transition-colors hover:bg-accent/50 bg-muted"
  data-testid="card"
  role="link"
  tabindex="0"
>
  <div
    class="flex w-full max-w-full min-w-0 flex-col gap-4 p-6"
    data-testid="card-content"
  >
    <div
      data-post-id="snapshot-post-id"
      data-testid="post-header"
      data-time-ago-placement="bottom-left"
    >
      PostHeader 
      snapshot-post-id
    </div>
    <div
      data-post-id="snapshot-post-id"
      data-testid="post-content-base"
    >
      PostContentBase 
      snapshot-post-id
    </div>
  </div>
</div>
`;
